syntax = "proto3";

package logon;

enum main {
	kMCNull = 0;
	kLogon = 1;
	kProto = 2;
}

enum sub {
	kSCNull = 0;
	kLogonReq = 1001;
	kLogonRes = 1002;
	kBytesReq = 2001;
	kBytesRes = 2002;
	kRepeatReq = 2003;
	kRepeatRes = 2004;
}

message LogonTest {
    uint32 id = 1;              //1 android, 2 ios,3 windows
    string name = 2;       
}

message BytesTest {
    uint32 id = 1;
    bytes buf = 2;
}

message RepeatItem {
	uint32 id = 1;
    string text = 2;  
}

message RepeatTest {
    repeated RepeatItem items = 1;
}